--- a/templates/assignments_list.html
+++ b/templates/assignments_list.html
@@ -6,6 +6,7 @@
     <div class="font-semibold">과제 목록</div>
     <input class="border rounded-lg px-3 py-1 text-sm" placeholder="검색(제목/과목)">
   </div>
+
   <div class="overflow-auto rounded-xl border">
     <table class="min-w-full text-sm">
       <thead class="bg-gray-50">
@@ -14,18 +15,22 @@
           <th class="px-3 py-2">과목</th>
           <th class="px-3 py-2">마감</th>
           <th class="px-3 py-2">상태</th>
-          <th class="px-3 py-2">제출현황</th>
+          <th class="px-3 py-2">열기</th>
         </tr>
       </thead>
       <tbody>
         {% for a in assignments %}
         <tr class="border-t hover:bg-gray-50">
           <td class="px-3 py-2">{{ a.title }}</td>
-          <td class="px-3 py-2">{{ a.course_title }}</td>
+          <td class="px-3 py-2">{{ a.course.title }}</td>
           <td class="px-3 py-2">{{ a.due_at }}</td>
-          <td class="px-3 py-2">{{ a.status }}</td>
-          <td class="px-3 py-2">{{ a.submissions }}/{{ a.total }}</td>
+          <td class="px-3 py-2">{{ a.status|default:'-' }}</td>
+          <td class="px-3 py-2">
+            <a href="{% url 'assignment_detail' a.id %}" class="px-2 py-1 text-xs rounded bg-gray-900 text-white">열기</a>
+          </td>
         </tr>
+        {% empty %}
+        <tr><td class="px-3 py-4 text-gray-500" colspan="5">과제가 없습니다.</td></tr>
         {% endfor %}
       </tbody>
     </table>
