로그인, 회원가입 페이지 UI 수정

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -9,8 +9,8 @@
 <body class="min-h-screen bg-gray-50 flex items-center justify-center">
   <div class="w-full max-w-sm bg-white border rounded-2xl p-6 shadow-sm">
     <div class="flex items-center gap-2 mb-4">
-      <img src="{% static 'img/polytech.png' %}" class="w-8 h-8" alt="logo">
-      <div class="font-semibold">Korea Polytechnics — 과제 제출</div>
+      <img src="{% static 'img/polytech.png' %}" class="w-auto h-[50px]" alt="logo">
+      <div class="font-semibold">한국폴리텍대학 - AISW <br>과제 제출 시스템</div>
     </div>
 
     {% if form.errors %}
