--- a/templates/grading.html
+++ b/templates/grading.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}채점 화면{% endblock %}
+{% block title %}과제제출시스템{% endblock %}
 {% block content %}
 <div class="grid gap-4">
     <div class="rounded-2xl border bg-white p-4 shadow-sm">
