--- a/templates/teams/teacher_team_list.html
+++ b/templates/teams/teacher_team_list.html
@@ -29,7 +29,7 @@
         {% if t.description %}
           <div class="text-sm text-gray-600 mt-1 line-clamp-2">{{ t.description }}</div>
         {% endif %}
-        <div class="text-xs text-gray-500 mt-2">코드: {{ t.join_code }}</div>
+        <div class="text-xs text-gray-500 mt-2">팀 코드: {{ t.join_code }}</div>
       </a>
     {% endfor %}
   </div>
