--- a/templates/assignments/submissions.html
+++ b/templates/assignments/submissions.html
@@ -28,7 +28,19 @@
       <tbody>
         {% for s in subs %}
         <tr class="border-t">
-          <td class="px-3 py-2">{{ s.student.username }}</td>
+          <td class="px-3 py-2">
+            {% with sp=s.student.studentprofile %}
+              {% if sp and s.student.first_name %}
+                {{ sp.student_id }} {{ s.student.first_name }}
+              {% elif s.student.first_name %}
+                {{ s.student.first_name }}
+              {% elif s.student.get_full_name %}
+                {{ s.student.get_full_name }}
+              {% else %}
+                {{ s.student.username }}
+              {% endif %}
+            {% endwith %}
+          </td>
           <td class="px-3 py-2">{{ s.get_status_display|default:s.status }}</td>
           <td class="px-3 py-2">{{ s.submitted_at|date:"Y-m-d H:i" }}</td>
           <td class="px-3 py-2">
